Добавляет стилевые файлы попапа и подключает их

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -5,7 +5,9 @@
 @import "globals/normalize.less";
 @import "globals/variables.less";
 @import "globals/visually-hidden.less";
+@import "blocks/cart-add.less";
 @import "blocks/catalog.less";
+@import "blocks/choice.less";
 @import "blocks/contacts.less";
 @import "blocks/copyright.less";
 @import "blocks/form.less";
