--- a/source/less/blocks/cart-add.less
+++ b/source/less/blocks/cart-add.less
@@ -12,7 +12,7 @@
     margin: 0 auto;
     background-color: @bg-block-light;
     outline: 1px solid @popup-outline;
-    box-shadow: 0px 5px 10px 0px @popup-shadow;
+    box-shadow: 0 5px 10px 0 @popup-shadow;
   }
 
   &__title {
@@ -46,6 +46,10 @@
     &:active {
       opacity: 0.3;
     }
+  }
+
+  &--closed {
+    display: none;
   }
 }
 
