вносит корректировку в позиционирование попапа

--- a/source/less/blocks/cart-add.less
+++ b/source/less/blocks/cart-add.less
@@ -1,5 +1,6 @@
 .cart-add {
   position: absolute;
+  top: 0;
   z-index: 1;
 
   width: 100%;
@@ -8,7 +9,10 @@
   background-color: @popup-background;
 
   &__wrapper {
-    .container(auto; 30px);
+    position: fixed;
+    top: 100px;
+    z-index: 2;
+    width: 100%;
     margin: 0 auto;
     background-color: @bg-block-light;
     outline: 1px solid @popup-outline;
@@ -56,6 +60,7 @@
 @media (min-width: @table-width) {
   .cart-add {
     &__wrapper {
+      left: calc(50% - 253px);
       width: 506px;
     }
 
