--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -74,6 +74,11 @@
     }
   }
 
+  &__map-interactive {
+    position: absolute;
+    z-index: 2;
+  }
+
   &__img {
     width: 320px;
     height: 457px;
