Исправляет паддинги форм указывает размеры legend

--- a/source/less/blocks/field-email.less
+++ b/source/less/blocks/field-email.less
@@ -4,10 +4,14 @@
   flex-direction: column;
   margin-bottom: 33px;
 
-  &__legend::after {
-    left: 82px;
+  &__legend {
+    width: 60px;
 
-    width: 178px;
+    &::after {
+      left: 82px;
+
+      width: 178px;
+    }
   }
 
   &__field {
@@ -16,7 +20,7 @@
 
     padding-top: 22px;
     padding-bottom: 16px;
-    padding-right: 45px;
+    padding-right: 40px;
     .font(17px; 400; 18px);
     background-color: transparent;
     border: none;
@@ -75,6 +79,7 @@
       margin-left: auto;
       padding-top: 16px;
       padding-left: 16px;
+      padding-right: 55px;
       padding-bottom: 13px;
       font-size: 19px;
     }
@@ -97,6 +102,7 @@
     &__field {
       width: 700px;
       margin-right: 175px;
+      padding-right: 40px;
     }
 
     &__icon {
