--- a/source/less/blocks/fieldset-fullname.less
+++ b/source/less/blocks/fieldset-fullname.less
@@ -11,6 +11,7 @@
   }
 
   &__legend {
+    width: 60px;
     margin-bottom: 28px;
   }
 
@@ -70,6 +71,7 @@
       flex-grow: 1;
       margin-left: 24px;
       padding-left: 16px;
+      padding-right: 16px;
       padding-top: 14px;
       padding-bottom: 13px;
       font-size: 19px;
