--- a/source/less/blocks/field-tel.less
+++ b/source/less/blocks/field-tel.less
@@ -4,6 +4,10 @@
   flex-direction: column;
   margin-bottom: 33px;
 
+  &__legend {
+    width: 60px;
+  }
+
   &__field {
     position: relative;
     z-index: 1;
@@ -12,7 +16,7 @@
     border-bottom: 2px solid @border-dark;
     padding-top: 17px;
     padding-bottom: 13px;
-    padding-right: 45px;
+    padding-right: 40px;
     .font(19px; 400; 18px);
     background-color: transparent;
 
@@ -69,6 +73,7 @@
       margin-left: auto;
       padding-top: 16px;
       padding-left: 16px;
+      padding-right: 55px;
     }
 
     &__icon {
@@ -89,6 +94,7 @@
     &__field {
       width: 700px;
       margin-right: 175px;
+      padding-right: 40px;
     }
 
     &__icon {
