--- a/source/less/globals/mixins.less
+++ b/source/less/globals/mixins.less
@@ -29,6 +29,8 @@
 .button(@width: 260px; @min-height: 52px;) {
   width: @width;
   min-height: @min-height;
+  padding-left: 20px;
+  padding-right: 20px;
   border: 2px solid @btn-color;
   text-align: center;
   .font(17px; 700; 20px);
