Исправляет размеры и внутренние отступы элементов

--- a/source/less/blocks/item.less
+++ b/source/less/blocks/item.less
@@ -126,15 +126,17 @@
     }
 
     &__description {
+      width: 230px;
       .font(15px; 400; 30px);
     }
 
     &__price {
-      width: 268px;
+      width: 248px;
       margin-left: auto;
       margin-right: 32px;
       margin-bottom: 25px;
       padding-top: 23px;
+      padding-right: 20px;
       .font(17px; 700; 24px);
       border-top: 1px solid @border-color;
     }
