--- a/source/less/blocks/product-week.less
+++ b/source/less/blocks/product-week.less
@@ -91,15 +91,16 @@
     }
 
     &__title {
-      width: 70px;
-      padding-left: 28px;
-      padding-right: 28px;
+      width: 72px;
+      padding-left: 27px;
+      padding-right: 27px;
       padding-bottom: 4px;
       line-height: 20px;
       text-align: center;
     }
 
     &__title-product {
+      max-width: 500px;
       margin-left: -3px;
       padding-top: 40px;
       padding-bottom: 0;
@@ -159,6 +160,7 @@
 
     &__title-product {
       z-index: 1;
+      max-width: 700px;
       padding-top: 118px;
       font-size: 53px;
       line-height: 57px;
