--- a/source/less/blocks/reviews.less
+++ b/source/less/blocks/reviews.less
@@ -108,9 +108,9 @@
 
   &__write {
     box-sizing: border-box;
-    display: block;
+    display: inline-block;
     .button();
-    padding: 14px 0;
+    padding: 14px 20px;
 
     &:hover,
     &:focus {
