--- a/source/less/blocks/user-list.less
+++ b/source/less/blocks/user-list.less
@@ -78,6 +78,8 @@
 
       padding: 0;
       padding-top: 17px;
+      width: 264px;
+
       .font(15px; 400; 24px);
       text-align: right;
       box-shadow: none;
